syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message FirstNpcTalkInfo {
    // bool finish_dialogue = 7;
    uint32 npc_id = 11;
}