syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "FirstNpcTalkInfo.proto";

message GetFirstTalkNpcScRsp {
	repeated FirstNpcTalkInfo npc_talk_info_list = 3;
	uint32 retcode = 4;
}